[package]
name = "passforge"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8.5"
anyhow = "1.0.44"
rpassword = "7"
sha2 = "0.10.8"
serde_json = "1.0"
serde = "1.0.0"
aes-gcm = "0.10.3"
